Fixing menu gap

--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -85,6 +85,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
   position: fixed;
+  top: 0;
   height: 100%;
 }
 
@@ -115,6 +116,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Styling of overlay */
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
+  top: 0;
+  left: 0;
 }
 
 .nav-gap {
